# Sovereign-System

./: README.md  acoustic.html  build. gradle  cyber.html  dashboard.html  evolution.html  gradlew  index.html  jamming.html  mesh.html  optical_scan.html  radar.html  settings.gradle  setup.html  sync. sh
.github/workflows/: android.yml  main.yml  sync.yml
app/: build.gradle
app/main/java/com/jamesfirstok/aegis/service/: AegisService.kt  LiveRadarService.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jamesfirstok/aegis/: MainActevity. kt  MainActivity.kt
app/src/main/java/com/jamesfirstok/aegis/core/sensors/: SensorFusionEngine.kt  SensorState.kt
app/src/main/java/com/jamesfirstok/aegis/model/: ConfigManager.kt  SecurityModel.kt
app/src/main/java/com/jamesfirstok/aegis/services/: SovereignService.kt
app/src/main/python/: tactical_engine.py
app/src/main/res/layout/: activity_main.xml
devcontainer/: devcontainer.json
